<resources>
    <string name="app_name">Green Flag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text1">GreenFlag costumers can create an account to access</string>
    <string name="btn_create_account_text">Create an account</string>
    <string name="inputEmailText">Email address</string>
    <string name="email_hint">example@example.com</string>
    <string name="password_input_text">Password</string>
    <string name="password_hint">See criteria below</string>
    <string name="repeat_password_input_text">Repeat password</string>
    <string name="password_criteria">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lower case letter, You can use special characters.</string>
    <string name="btn_next_text">Next</string>
    <string name="marginDefault">50dp</string>
    <string name="paddingTopDefault">50dp</string>
    <string name="elementHeightDefault">50dp</string>
    <string name="elementTextSize">20sp</string>
    <string name="elementMarginBottom">20dp</string>
    <string name="inputHeight">48dp</string>
    <string name="inputTextSize">25sp</string>
    <string name="inputMarginHorizontal">20dp</string>
    <string name="error_msg1">One of the passwords you entered wasnt valid</string>

</resources>