<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignupActivity"
        android:paddingTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="50dp">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                android:layout_gravity="center"
                android:contentDescription="back arrow"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/btn_create_account_text"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_weight="5"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="20dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inputEmailText"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:id="@+id/loEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_marginHorizontal="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tivEmail"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="5"
                android:layout_marginBottom="20dp"
                android:hint="@string/email_hint"
                android:paddingHorizontal="20dp"
                android:textColorHint="#78909C"
                android:background="@android:color/transparent"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/ivEmailCheck"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                tools:src="@drawable/ic_baseline_check_24" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_input_text"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:id="@+id/loPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_marginHorizontal="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tivPass"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="5"
                android:layout_marginBottom="20dp"
                android:hint="@string/password_hint"
                android:paddingHorizontal="20dp"
                android:textColorHint="#78909C"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:inputType="textPassword"/>
            <ImageView
                android:id="@+id/ivPassCheck"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                tools:src="@drawable/ic_baseline_check_24" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password_input_text"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itvRepeatPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:paddingHorizontal="20dp"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck"
            android:inputType="textPassword"/>
        <LinearLayout
            android:id="@+id/loError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/border_red"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/ic_baseline_cancel_24"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginBottom="20dp"
                android:textColor="@color/textColor"
                android:text="@string/error_msg1"
                android:paddingHorizontal="20dp"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_criteria"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="0dp"/>
        <TextView
            android:id="@+id/btn_Next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn_next_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:enabled="false"
            android:layout_margin="50dp"
            android:background="@drawable/disabledbg"/>

    </LinearLayout>
</ScrollView>